fixed scroll error with css collapse

--- a/src/Components/Card/Page/Blog/Blog.module.scss
+++ b/src/Components/Card/Page/Blog/Blog.module.scss
@@ -10,5 +10,9 @@
 .container {
   width: 100%;
   height: 100%;
+
+  section {
+    height: max-content;
+  }
 }
 
