--- a/src/root.scss
+++ b/src/root.scss
@@ -19,7 +19,7 @@ body {
 }
 
 .expand {
-  max-height: 100em;
+  max-height: 500rem;
   transform: translateY(0);
   transition: max-height 0.5s;
 }
